--- a/.github/workflows/mobile-tests.yml
+++ b/.github/workflows/mobile-tests.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Run Login Logout Test
         run: |
-          python tests/STG_Smann/Login_Logout/Login_Logout_RealPhone.py
+          python C:/Users/shrik/OneDrive/Desktop/Smann_Automation_Testing_STG_Builds/Tests/STG_Smann/Login_Logout/Login_Logout_RealPhone.py
