--- a/.github/workflows/mobile-tests.yml
+++ b/.github/workflows/mobile-tests.yml
@@ -13,18 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
+      - name: Check Python version
         run: |
-          pip install -r requirements.txt
+          python --version
+
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     python -m pip install Appium-Python-Client selenium
+
+      - name: Check ADB devices
+        run: |
+          adb devices
 
       - name: Start Appium Server
         run: |
-          start /B appium
+          appium --log appium.log --log-level info &
 
       - name: Wait for Appium
         run: |
@@ -32,4 +36,4 @@ jobs:
 
       - name: Run Login Logout Test
         run: |
-          python C:/Users/shrik/OneDrive/Desktop/Smann_Automation_Testing_STG_Builds/Tests/STG_Smann/Login_Logout/Login_Logout_RealPhone.py
+          python Tests/STG_Smann/Login_Logout/Login_Logout_RealPhone.py
