--- a/.github/workflows/mobile-tests.yml
+++ b/.github/workflows/mobile-tests.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Wait for Appium
         run: |
-          timeout /t 10
+          Start-Sleep -Seconds 10
 
       - name: Run Login Logout Test
         run: |
