--- a/.github/workflows/mobile-tests.yml
+++ b/.github/workflows/mobile-tests.yml
@@ -1,3 +1,45 @@
+# name: Mobile Automation CI
+
+# on:
+#   push:
+#     branches: [ main ]
+#   workflow_dispatch:
+
+# jobs:
+#   android-tests:
+#     runs-on: self-hosted
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Check Python version
+#         run: |
+#           python --version
+
+#       # - name: Install dependencies
+#       #   run: |
+#       #     python -m pip install --upgrade pip
+#       #     python -m pip install Appium-Python-Client selenium
+
+#       - name: Check ADB devices
+#         run: |
+#           adb devices
+
+#       - name: Start Appium Server
+#         run: |
+#           Start-Process appium -ArgumentList "--log appium.log --log-level info"
+
+#       - name: Wait for Appium
+#         run: |
+#           Start-Sleep -Seconds 10
+
+#       - name: Run Login Logout Test
+#         run: |
+#           python Tests/STG_Smann/Login_Logout/Login_Logout_RealPhone.py
+
+
+
 name: Mobile Automation CI
 
 on:
@@ -13,14 +55,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Check Python version
+      - name: Check Python
         run: |
           python --version
 
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     python -m pip install Appium-Python-Client selenium
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install Appium-Python-Client selenium
 
       - name: Check ADB devices
         run: |
@@ -28,9 +70,9 @@ jobs:
 
       - name: Start Appium Server
         run: |
-          Start-Process appium -ArgumentList "--log appium.log --log-level info"
+          start "" cmd /c appium --log appium.log
 
-      - name: Wait for Appium
+      - name: Wait for Appium to start
         run: |
           Start-Sleep -Seconds 10
 
